<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DragAndDropTutorial</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="apple">Apples</string>
    <string name="pear">Pear</string>
    <string name="orange">Orange</string>
    <string name="banana">Banana</string>
    <string name="dropTarget">Drop Target</string>

</resources>